Estilado sobre Css

--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -7,9 +7,35 @@
     box-sizing: border-box;
 }
 
+/* ESTILOS DE PAGINA INDEX /*
 
+    /* Estilo de grilla y contenedores /*
 
+    /* Estilo dentro de los contenedores/*
 
+/* ESTILOS PAGINA SOBRE NOSOTROS /*
+
+    /* Estilo de grilla y contenedores /*
+
+    /* Estilo dentro de los contenedores/*
+
+/* ESTILOS PAGINA SERVICIOS /*
+
+    /* Estilo de grilla y contenedores /*
+
+    /* Estilo dentro de los contenedores/*
+
+/* ESTILOS PAGINA PROYECTOS /*
+
+    /* Estilo de grilla y contenedores /*
+
+    /* Estilo dentro de los contenedores/*
+
+/* ESTILOS PAGINA CONTACTO /*
+
+    /* Estilo de grilla y contenedores /*
+
+    /* Estilo dentro de los contenedores/*
 
 
 
