--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,4 +1,3 @@
-
 /* FORMATO GENERAL DE LA PAGINA */
 
 * {
@@ -7,66 +6,9 @@
     box-sizing: border-box;
 }
 
-/* ESTILOS DE PAGINA INDEX /*
+/* ESTILOS EN EL HEADER */
 
-    /* Estilo de grilla y contenedores /*
-
-    /* Estilo dentro de los contenedores/*
-
-/* ESTILOS PAGINA SOBRE NOSOTROS /*
-
-    /* Estilo de grilla y contenedores /*
-
-    /* Estilo dentro de los contenedores/*
-
-/* ESTILOS PAGINA SERVICIOS /*
-
-    /* Estilo de grilla y contenedores /*
-
-    /* Estilo dentro de los contenedores/*
-
-/* ESTILOS PAGINA PROYECTOS /*
-
-    /* Estilo de grilla y contenedores /*
-
-    /* Estilo dentro de los contenedores/*
-
-/* ESTILOS PAGINA CONTACTO /*
-
-    /* Estilo de grilla y contenedores /*
-
-    /* Estilo dentro de los contenedores/*
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ESTILOS DE ENTREGA ANTERIOR /*
-
-/* .estiloHeader {
+.estiloHeader {
     display: flex;
     background-color: black;
     justify-content: space-between;
@@ -75,20 +17,17 @@
 }
 
 #Logo {
-    height: 4rem;
-    padding: 1rem;
+    height: 8rem;
 }
 
 a {
     text-decoration: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 18px;
     color: white;
 }
 
 .gralNav {
     display: flex;
-    margin: 8px;
 }
 
 .gralNav li {
@@ -96,19 +35,7 @@ a {
 
 }
 
-h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 50px;
-    font-style: italic;
-    color: black;
-}
-
-.espacioGralInicio {
-    height: 60rem;
-    background-image: url(../Imagenes/Desarrollos\ Inmobiliarios\ render.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+/* ESTILOS EN EL FOOTER */
 
 .estiloFooter {
     background-color: black;
@@ -140,6 +67,23 @@ h1 {
     margin: 1rem;
 }
 
+/* MAIN DEL INDEX */
+
+h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 50px;
+    font-style: italic;
+    color: black;
+}
+
+.espacioGralInicio {
+    height: 60rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*MAIN SOBRE NOSOTROS */
+
 .cuerpoSobreNosotros {
     display: flex;
     justify-content: space-evenly;
@@ -167,22 +111,18 @@ h1 {
 
 }
 
+/* MAIN SERVICIOS */
+
 .tituloPgServicios {
     margin-top: 1rem;
     margin-left: 3rem;
     background-color: darkgrey;
 }
 
+/* Estilos de texto de Diseño Arq y de Decoracion y estilo */
+
 .ubicacionElementos {
     display: flex;
-}
-
-.tituloSecundario {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-style: italic;
-    margin: 2rem 0rem 0rem 3rem;
-    text-decoration: underline;
-    font-size: 35px;
 }
 
 .estiloDeTextoServicios {
@@ -209,15 +149,7 @@ h1 {
     margin: 5rem;
 }
 
-.imagenArquitectonico {
-    width: 45rem;
-    margin-left: 5rem;
-}
-
-.ImagenIlumincion {
-    height: 35rem;
-    margin-left: 5rem;
-}
+/* Estilos de texto de Iluminacion y Diseño Grafico */
 
 .estilostextoIluminacion {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -243,10 +175,23 @@ h1 {
     margin: 5rem;
 }
 
+/* Imagenes */
+
+.ImagenIlumincion {
+    height: 35rem;
+    margin-left: 5rem;
+}
+
+.imagenArquitectonico {
+    width: 45rem;
+    margin-left: 5rem;
+}
+
 .imagenDiseñoInterior {
     height: 35rem;
     margin-left: 12rem;
     margin-top: 2rem;
+
 }
 
 .imagenGrafica {
@@ -254,6 +199,20 @@ h1 {
     margin-top: 3rem;
     margin-left: 8rem;
 }
+
+/* MAIN PROYECTOS */
+
+/*Estilos sobre textos */
+
+.tituloSecundario {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: italic;
+    margin: 2rem 0rem 0rem 3rem;
+    text-decoration: underline;
+    font-size: 35px;
+}
+
+/*Estilo sobre Imagenes*/
 
 .imagenVivienda1 {
     margin: 2rem;
@@ -307,6 +266,10 @@ h1 {
     margin: 3rem;
 }
 
+/* MAIN CONTACTOS */
+
+/*Estilos en titulos */
+
 .titulosContactos {
     display: flex;
     justify-content: space-between;
@@ -320,11 +283,13 @@ h1 {
     color: black;
 }
 
+/*Estilos en Cuerpo main */
+
 .mapaInput {
     display: flex;
     justify-content: space-around;
     margin: 2rem;
-}
+    }
 
 .mapa {
     width: 40rem;
@@ -343,8 +308,13 @@ h1 {
     font-size: 20px;
     font-style: italic;
     margin-bottom: 1rem;
-
 }
+
+.prueba {
+    margin-left: 3rem;
+    margin-bottom: 3rem;
+}
+/* Estilos en formulairo */
 
 .formulario {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -398,14 +368,43 @@ h1 {
     text-align: center;
     align-items: center;
     height: 20px;
+}
 
+
+
+/*Prueba grilla*/
+
+/* .estiloHeader {
+    background-color: black;
 
 }
 
-.prueba {
-    margin-left: 3rem;
-    margin-bottom: 3rem;
+.estiloMain {
+    background-color: brown;
+}
+
+.estiloFooter {
+    background-color: black;
 } */
 
+/* .GrillaGralIndex {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+} */
 
-/* ESTILO ESPECIAL /*
+/* .GrillaHeader {
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+
+.GrillaMain {
+    grid-column: 1/5;
+    grid-row: 2/5;
+}
+
+.GrillaFooter {
+    grid-column: 1/5;
+    grid-row: 5/6;
+} */
+
