--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -6,80 +6,138 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-size: 50px;
+    font-style: italic;
+    color: black;
+}
+
 /* ESTILOS EN EL HEADER */
 
-.estiloHeader {
-    display: flex;
+.container-fluid {
     background-color: black;
-    justify-content: space-between;
-    align-items: baseline;
-    padding: 15px;
+
 }
 
-#Logo {
-    height: 8rem;
+.logoLicen {
+    height: 110px;
 }
 
-a {
-    text-decoration: none;
+/* .ubNav {
+    margin-left: 45rem;
+    margin-top: 5rem;
+} */
+
+/* .nav-link {
+    background-color: blueviolet;
     font-size: 18px;
-    color: white;
+} */
+
+
+#navbarSupportedContent {
+    background-color: violet;
+    text-decoration: none;
 }
 
-.gralNav {
+.nav-item a {
+    color: yellow;
+    font-size: 20px;
+}
+
+
+@media (max-width:990px) {
+    .logoLicen {
+        margin-right: 65%;
+    }
+}
+
+
+/* a {
+    text-decoration: none;
+    list-style: none;
+    font-size: 18px;
+} */
+
+/* .gralNav {
     display: flex;
-}
+    list-style: none;
+} */
 
-.gralNav li {
+
+.gralNav a {
     margin: 0rem 1rem;
-
+    color: blueviolet;
 }
 
 /* ESTILOS EN EL FOOTER */
 
 .estiloFooter {
     background-color: black;
+    height: 10rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
+.logoLicen2 {
+    margin-left: 10px;
+    height: 110px;
+}
+
 .textoPiePaginas {
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 13px;
     font-style: italic;
     text-align: justify;
     width: 25rem;
 }
 
-.infoAdicional {
-    margin: 1rem;
+.textoPiePaginas p {
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 14px;
+    margin: 2rem;
+}
+
+.infoAdicional {
+    color: white;
+
 }
 
 .infoAdicional li {
-    margin: 1rem;
+    list-style: none;
+}
+
+.infoAdicional h2 {
+    font-size: 20px;
 }
 
 .enlacesRedes a {
     margin: 1rem;
+    font-size: 30px;
+
 }
+
+.enlacesRedes2 a {
+    margin: 1rem;
+    font-size: 15px;
+    color: white;
+    text-decoration: none;
+}
+
+
 
 /* MAIN DEL INDEX */
 
-h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 50px;
-    font-style: italic;
-    color: black;
-}
 
 .espacioGralInicio {
-    height: 60rem;
+    height: 150vh;
     background-repeat: no-repeat;
     background-size: cover;
+    /* background-image: url("/Imagenes/Fondo\ de\ pagina\ blanco.jpg"); */
+    background-color: white;
+}
+
+.carousel-item {
+    height: 60rem;
+
 }
 
 /*MAIN SOBRE NOSOTROS */
@@ -91,7 +149,6 @@ h1 {
 }
 
 .cuerpoSobreNosotros h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 50px;
     font-style: italic;
     color: black;
@@ -99,7 +156,6 @@ h1 {
 }
 
 .textoDescriptivo {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     padding: 2rem;
 }
@@ -108,7 +164,6 @@ h1 {
     margin-top: 3rem;
     color: dimgrey;
     font-size: 17px;
-
 }
 
 /* MAIN SERVICIOS */
@@ -126,7 +181,6 @@ h1 {
 }
 
 .estiloDeTextoServicios {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     width: 35rem;
     margin-top: 3rem;
@@ -134,9 +188,8 @@ h1 {
 }
 
 .estiloDeTextoServicios h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: italic;
-    font-size: 35px;
+    font-size: 50px;
 }
 
 .estiloDeTextoServicios p {
@@ -152,7 +205,6 @@ h1 {
 /* Estilos de texto de Iluminacion y Diseño Grafico */
 
 .estilostextoIluminacion {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     width: 35rem;
     margin-top: 3rem;
@@ -160,9 +212,8 @@ h1 {
 }
 
 .estilostextoIluminacion h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: italic;
-    font-size: 35px;
+    font-size: 50px;
 }
 
 .estilostextoIluminacion p {
@@ -180,24 +231,27 @@ h1 {
 .ImagenIlumincion {
     height: 35rem;
     margin-left: 5rem;
+    border-radius:  30px;
 }
 
 .imagenArquitectonico {
     width: 45rem;
     margin-left: 5rem;
+    border-radius:  30px;
 }
 
 .imagenDiseñoInterior {
     height: 35rem;
     margin-left: 12rem;
     margin-top: 2rem;
-
+    border-radius:  30px;
 }
 
 .imagenGrafica {
     height: 40rem;
     margin-top: 3rem;
     margin-left: 8rem;
+    border-radius:  30px;
 }
 
 /* MAIN PROYECTOS */
@@ -205,65 +259,75 @@ h1 {
 /*Estilos sobre textos */
 
 .tituloSecundario {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: italic;
     margin: 2rem 0rem 0rem 3rem;
     text-decoration: underline;
-    font-size: 35px;
+    font-size: 50px;
 }
 
 /*Estilo sobre Imagenes*/
 
 .imagenVivienda1 {
     margin: 2rem;
+    border-radius:  30px;
 }
 
 .imagenVivienda2 {
     margin: 2rem;
     width: 35rem;
+    border-radius:  30px;
 }
 
 .imagenesViviendas {
     display: flex;
     justify-content: space-evenly;
+    border-radius:  30px;
 }
 
 .imagenClinica1 {
     width: 45rem;
     margin: 2rem;
+    border-radius:  30px;
 }
 
 .imagenclinica2 {
     margin: 2rem;
+    border-radius:  30px;
 }
 
 .imagenGastro1 {
     width: 45rem;
     margin-top: 3rem;
+    border-radius:  30px;
 }
 
 .imagenGastro2 {
     margin-top: 3rem;
+    border-radius:  30px;
 }
 
 .imagenHotel {
     width: 35rem;
     margin-top: 2rem;
+    border-radius:  30px;
 }
 
 .imagenTeatro {
     width: 45rem;
     margin-top: 2rem;
+    border-radius:  30px;
 }
 
 .imagenGym {
     width: 35rem;
     margin: 3rem;
+    border-radius:  30px;
 }
 
 .imagenPadel {
     width: 45rem;
     margin: 3rem;
+    border-radius:  30px;
 }
 
 /* MAIN CONTACTOS */
@@ -277,7 +341,6 @@ h1 {
 }
 
 .otroTitulo {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 50px;
     font-style: italic;
     color: black;
@@ -289,21 +352,19 @@ h1 {
     display: flex;
     justify-content: space-around;
     margin: 2rem;
-    }
+}
 
 .mapa {
     width: 40rem;
 }
 
 .datosOficina {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-left: 2rem;
     color: dimgrey;
     display: flex;
 }
 
 .titulotercero {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: dimgray;
     font-size: 20px;
     font-style: italic;
@@ -314,11 +375,11 @@ h1 {
     margin-left: 3rem;
     margin-bottom: 3rem;
 }
+
 /* Estilos en formulairo */
 
 .formulario {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: dimgray;
+   color: dimgray;
 
 }
 
@@ -357,14 +418,14 @@ h1 {
 .ingreMensaje {
     width: 35rem;
     height: 10rem;
-
+    
 }
+
 
 .submit {
     color: dimgray;
-    border: 2px solid rgb(167, 166, 166);
-    padding: 3px;
-    margin-left: 580px;
+    border: 3px solid rgb(167, 166, 166);
+    margin-left: 650px;
     text-align: center;
     align-items: center;
     height: 20px;
@@ -407,4 +468,3 @@ h1 {
     grid-column: 1/5;
     grid-row: 5/6;
 } */
-
