--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -16,12 +16,45 @@ h1 {
 
 .container-fluid {
     background-color: black;
-
 }
 
 .logoLicen {
     height: 110px;
 }
+
+.navbar {
+    --bs-navbar-padding-x: 0;
+    --bs-navbar-padding-y: 0;
+}
+
+.nav-menu * {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+}
+
+.nav-menu>ul>li {
+    position: relative;
+    white-space: nowrap;
+}
+
+.nav-menu a {
+    display: flex;
+    align-items: center;
+    color: white;
+    padding: 10px 18px;
+    margin-bottom: 8px;
+    font-size: 15px;
+    height: 56px;
+    width: 100%;
+}
+
+.nav-item {
+    color: white;
+}
+
+
 
 /* .ubNav {
     margin-left: 45rem;
@@ -33,8 +66,7 @@ h1 {
     font-size: 18px;
 } */
 
-
-#navbarSupportedContent {
+/* #navbarSupportedContent {
     background-color: violet;
     text-decoration: none;
 }
@@ -49,8 +81,7 @@ h1 {
     .logoLicen {
         margin-right: 65%;
     }
-}
-
+} */
 
 /* a {
     text-decoration: none;
@@ -63,43 +94,40 @@ h1 {
     list-style: none;
 } */
 
-
-
-.gralNav a {
+/* .gralNav a {
     margin: 0rem 1rem;
     color: blueviolet;
-}
+} */
 
 /* ESTILOS EN EL FOOTER */
 
 .estiloFooter {
     background-color: black;
-    height: 10rem;
+    height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: auto;
 }
 
 .logoLicen2 {
-    margin-left: 10px;
     height: 110px;
 }
 
 .textoPiePaginas {
     font-style: italic;
     text-align: justify;
-    width: 25rem;
 }
 
 .textoPiePaginas p {
     color: white;
     font-size: 14px;
-    margin: 2rem;
+    margin-top: 15px;
 }
 
 .infoAdicional {
     color: white;
-
+    margin-top: 25px;
 }
 
 .infoAdicional li {
@@ -111,13 +139,14 @@ h1 {
 }
 
 .enlacesRedes a {
-    margin: 1rem;
     font-size: 30px;
+}
 
+.enlacesRedes2 {
+    margin-top: 25px;
 }
 
 .enlacesRedes2 a {
-    margin: 1rem;
     font-size: 15px;
     color: white;
     text-decoration: none;
@@ -127,23 +156,20 @@ h1 {
 
 /* MAIN DEL INDEX */
 
+#imagenCentral {
+    width: 100%;
+}
 
-.espacioGralInicio {
+/* .espacioGralInicio {
     height: 150vh;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-image: url("/Imagenes/Fondo\ de\ pagina\ blanco.jpg"); */
     background-color: white;
-}
-
-.carousel-item {
-    height: 60rem;
-
-}
+} */
 
 /*MAIN SOBRE NOSOTROS */
 
-.cuerpoSobreNosotros {
+/* .cuerpoSobreNosotros {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -165,7 +191,7 @@ h1 {
     margin-top: 3rem;
     color: dimgrey;
     font-size: 17px;
-}
+} */
 
 /* MAIN SERVICIOS */
 
