--- a/Iconos/backupestilos.css
+++ b/Iconos/backupestilos.css
@@ -1,4 +1,4 @@
-/* FORMATO GENERAL DE LA PAGINA */
+/* FORMATO GENERAL DE LA PAGINA
 
 * {
     margin: 0;
@@ -13,7 +13,7 @@ h1 {
 }
 
 /* ESTILOS EN EL HEADER */
-
+/* 
 .container-fluid {
     background-color: black;
 
@@ -21,7 +21,7 @@ h1 {
 
 .logoLicen {
     height: 110px;
-}
+} */
 
 /* .ubNav {
     margin-left: 45rem;
@@ -33,7 +33,7 @@ h1 {
     font-size: 18px;
 } */
 
-
+/* 
 #navbarSupportedContent {
     background-color: violet;
     text-decoration: none;
@@ -49,7 +49,7 @@ h1 {
     .logoLicen {
         margin-right: 65%;
     }
-}
+} */
 
 
 /* a {
@@ -64,21 +64,21 @@ h1 {
 } */
 
 
-.gralNav a {
+/* .gralNav a {
     margin: 0rem 1rem;
     color: blueviolet;
-}
+} */
 
 /* ESTILOS EN EL FOOTER */
 
-.estiloFooter {
+/* .estiloFooter {
     background-color: black;
     height: 10rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
+} */
+/* 
 .logoLicen2 {
     margin-left: 10px;
     height: 110px;
@@ -120,29 +120,29 @@ h1 {
     font-size: 15px;
     color: white;
     text-decoration: none;
-}
+} */
 
 
 
 /* MAIN DEL INDEX */
 
-
+/* 
 .espacioGralInicio {
     height: 150vh;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-image: url("/Imagenes/Fondo\ de\ pagina\ blanco.jpg"); */
+    /* background-image: url("/Imagenes/Fondo\ de\ pagina\ blanco.jpg");
     background-color: white;
 }
 
-.carousel-item {
+/* .carousel-item {
     height: 60rem;
 
-}
+} */ */
 
 /*MAIN SOBRE NOSOTROS */
 
-.cuerpoSobreNosotros {
+/* .cuerpoSobreNosotros {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -164,19 +164,19 @@ h1 {
     margin-top: 3rem;
     color: dimgrey;
     font-size: 17px;
-}
+} */
 
 /* MAIN SERVICIOS */
 
-.tituloPgServicios {
+/* .tituloPgServicios {
     margin-top: 1rem;
     margin-left: 3rem;
     background-color: darkgrey;
-}
+} */
 
 /* Estilos de texto de Diseño Arq y de Decoracion y estilo */
 
-.ubicacionElementos {
+/* .ubicacionElementos {
     display: flex;
 }
 
@@ -200,11 +200,11 @@ h1 {
     color: dimgrey;
     margin-top: 3rem;
     margin: 5rem;
-}
+} */
 
 /* Estilos de texto de Iluminacion y Diseño Grafico */
 
-.estilostextoIluminacion {
+/* .estilostextoIluminacion {
     text-align: center;
     width: 35rem;
     margin-top: 3rem;
@@ -224,10 +224,10 @@ h1 {
     color: dimgrey;
     margin-top: 3rem;
     margin: 5rem;
-}
+/* } */
 
 /* Imagenes */
-
+/* 
 .ImagenIlumincion {
     height: 35rem;
     margin-left: 5rem;
@@ -252,21 +252,21 @@ h1 {
     margin-top: 3rem;
     margin-left: 8rem;
     border-radius:  30px;
-}
+} */ */
 
 /* MAIN PROYECTOS */
 
 /*Estilos sobre textos */
-
+/* 
 .tituloSecundario {
     font-style: italic;
     margin: 2rem 0rem 0rem 3rem;
     text-decoration: underline;
     font-size: 50px;
-}
+} */
 
 /*Estilo sobre Imagenes*/
-
+/* 
 .imagenVivienda1 {
     margin: 2rem;
     border-radius:  30px;
@@ -328,13 +328,13 @@ h1 {
     width: 45rem;
     margin: 3rem;
     border-radius:  30px;
-}
+} */
 
 /* MAIN CONTACTOS */
 
 /*Estilos en titulos */
 
-.titulosContactos {
+/* .titulosContactos {
     display: flex;
     justify-content: space-between;
     margin: 3rem;
@@ -344,11 +344,11 @@ h1 {
     font-size: 50px;
     font-style: italic;
     color: black;
-}
+} */
 
 /*Estilos en Cuerpo main */
 
-.mapaInput {
+/* .mapaInput {
     display: flex;
     justify-content: space-around;
     margin: 2rem;
@@ -374,15 +374,15 @@ h1 {
 .prueba {
     margin-left: 3rem;
     margin-bottom: 3rem;
-}
+} */
 
 /* Estilos en formulairo */
-
+/* 
 .formulario {
    color: dimgray;
 
-}
-
+} */
+/* 
 .formulario2 {
     margin-bottom: 10px;
 }
@@ -429,8 +429,8 @@ h1 {
     text-align: center;
     align-items: center;
     height: 20px;
-}
-
+} */
+ */
 
 
 /*Prueba grilla*/
