--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -12,6 +12,20 @@ h1 {
     color: black;
 }
 
+/* Estilos de texto para varias paginas*/
+
+.textoDescriptivo {
+    text-align: center;
+    padding: 2rem;
+    }
+
+.textoDescriptivo p {
+    margin-top: 3rem;
+    color: dimgrey;
+    font-size: 17px;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* ESTILOS EN EL HEADER */
 
 .container-fluid {
@@ -54,6 +68,7 @@ h1 {
     color: white;
 }
 
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* ESTILOS EN EL FOOTER */
 
 .estiloFooter {
@@ -107,74 +122,94 @@ h1 {
     text-decoration: none;
 }
 
-
-
-/* MAIN DEL INDEX */
-
-#imagenCentral {
-    width: 100%;
-}
-
-/* .espacioGralInicio {
-    height: 150vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: white;
-} */
-
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /*MAIN SOBRE NOSOTROS */
 
-/* .cuerpoSobreNosotros {
+.cuerpoSobreNosotros {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.cuerpoSobreNosotros h2 {
+.cuerpoSobreNosotros h1 {
     font-size: 50px;
     font-style: italic;
     color: black;
     text-align: center;
 }
 
-.textoDescriptivo {
-    text-align: center;
-    padding: 2rem;
+/*---------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/* MAIN PROYECTOS */
+
+/*Estilo sobre Imagenes*/
+
+.imagenes {
+    width: 100%;
+    border-radius: 30px;
+    padding: .5rem;
 }
 
-.textoDescriptivo p {
-    margin-top: 3rem;
-    color: dimgrey;
-    font-size: 17px;
+.row {
+    --bs-gutter-x: 0rem;
+}
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/* MAIN CONTACTOS */
+
+
+.mapa {
+    width: 100%
+}
+/*Estilos sobre textos */
+
+/* .tituloSecundario {
+    font-style: italic;
+    margin: 2rem 0rem 0rem 3rem;
+    text-decoration: underline;
+    font-size: 50px;
 } */
 
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* MAIN SERVICIOS */
 
-.tituloPgServicios {
-    margin-top: 1rem;
-    margin-left: 3rem;
-    background-color: darkgrey;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Estilos de texto de Diseño Arq y de Decoracion y estilo */
 
-.ubicacionElementos {
+/* .ubicacionElementos {
     display: flex;
-}
+} */
 
-.estiloDeTextoServicios {
+/* .estiloDeTextoServicios {
     text-align: center;
     width: 35rem;
     margin-top: 3rem;
     margin-left: 5rem;
-}
+} */
 
-.estiloDeTextoServicios h2 {
+/* .estiloDeTextoServicios h2 {
     font-style: italic;
     font-size: 50px;
-}
+} */
 
-.estiloDeTextoServicios p {
+/* .estiloDeTextoServicios p {
     text-align: justify;
     width: 25rem;
     font-size: 25px;
@@ -182,11 +217,11 @@ h1 {
     color: dimgrey;
     margin-top: 3rem;
     margin: 5rem;
-}
+} */
 
 /* Estilos de texto de Iluminacion y Diseño Grafico */
 
-.estilostextoIluminacion {
+/* .estilostextoIluminacion {
     text-align: center;
     width: 35rem;
     margin-top: 3rem;
@@ -206,141 +241,35 @@ h1 {
     color: dimgrey;
     margin-top: 3rem;
     margin: 5rem;
-}
+} */
 
-/* Imagenes */
-
-.ImagenIlumincion {
-    height: 35rem;
-    margin-left: 5rem;
-    border-radius:  30px;
-}
-
-.imagenArquitectonico {
-    width: 45rem;
-    margin-left: 5rem;
-    border-radius:  30px;
-}
-
-.imagenDiseñoInterior {
-    height: 35rem;
-    margin-left: 12rem;
-    margin-top: 2rem;
-    border-radius:  30px;
-}
-
-.imagenGrafica {
-    height: 40rem;
-    margin-top: 3rem;
-    margin-left: 8rem;
-    border-radius:  30px;
-}
-
-/* MAIN PROYECTOS */
-
-/*Estilos sobre textos */
-
-.tituloSecundario {
-    font-style: italic;
-    margin: 2rem 0rem 0rem 3rem;
-    text-decoration: underline;
-    font-size: 50px;
-}
-
-/*Estilo sobre Imagenes*/
-
-.imagenVivienda1 {
-    margin: 2rem;
-    border-radius:  30px;
-}
-
-.imagenVivienda2 {
-    margin: 2rem;
-    width: 35rem;
-    border-radius:  30px;
-}
-
-.imagenesViviendas {
-    display: flex;
-    justify-content: space-evenly;
-    border-radius:  30px;
-}
-
-.imagenClinica1 {
-    width: 45rem;
-    margin: 2rem;
-    border-radius:  30px;
-}
-
-.imagenclinica2 {
-    margin: 2rem;
-    border-radius:  30px;
-}
-
-.imagenGastro1 {
-    width: 45rem;
-    margin-top: 3rem;
-    border-radius:  30px;
-}
-
-.imagenGastro2 {
-    margin-top: 3rem;
-    border-radius:  30px;
-}
-
-.imagenHotel {
-    width: 35rem;
-    margin-top: 2rem;
-    border-radius:  30px;
-}
-
-.imagenTeatro {
-    width: 45rem;
-    margin-top: 2rem;
-    border-radius:  30px;
-}
-
-.imagenGym {
-    width: 35rem;
-    margin: 3rem;
-    border-radius:  30px;
-}
-
-.imagenPadel {
-    width: 45rem;
-    margin: 3rem;
-    border-radius:  30px;
-}
-
+/*----------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* MAIN CONTACTOS */
 
 /*Estilos en titulos */
 
-.titulosContactos {
+/* .titulosContactos {
     display: flex;
     justify-content: space-between;
     margin: 3rem;
-}
+} */
 
-.otroTitulo {
+/* .otroTitulo {
     font-size: 50px;
     font-style: italic;
     color: black;
-}
+} */
 
 /*Estilos en Cuerpo main */
 
-.mapaInput {
+/* .mapaInput {
     display: flex;
     justify-content: space-around;
     margin: 2rem;
-}
+} */
 
-.mapa {
-    width: 40rem;
-}
 
-.datosOficina {
+/* .datosOficina {
     margin-left: 2rem;
     color: dimgrey;
     display: flex;
@@ -353,14 +282,14 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.prueba {
+/* .prueba {
     margin-left: 3rem;
     margin-bottom: 3rem;
-}
+} */
 
 /* Estilos en formulairo */
 
-.formulario {
+/* .formulario {
      color: dimgray;
 
 }
@@ -411,97 +340,6 @@ h1 {
     text-align: center;
     align-items: center;
     height: 20px;
-}
-
-
-
-
-
-
-
-/* .ubNav {
-    margin-left: 45rem;
-    margin-top: 5rem;
-} */
-
-/* .nav-link {
-    background-color: blueviolet;
-    font-size: 18px;
-} */
-
-/* #navbarSupportedContent {
-    background-color: violet;
-    text-decoration: none;
-}
-
-.nav-item a {
-    color: yellow;
-    font-size: 20px;
-}
-
-
-@media (max-width:990px) {
-    .logoLicen {
-        margin-right: 65%;
-    }
-} */
-
-/* a {
-    text-decoration: none;
-    list-style: none;
-    font-size: 18px;
-} */
-
-/* .gralNav {
-    display: flex;
-    list-style: none;
-} */
-
-/* .gralNav a {
-    margin: 0rem 1rem;
-    color: blueviolet;
 } */
 
 
-
-
-
-
-
-
-
-/*Prueba grilla*/
-
-/* .estiloHeader {
-    background-color: black;
-
-}
-
-.estiloMain {
-    background-color: brown;
-}
-
-.estiloFooter {
-    background-color: black;
-} */
-
-/* .GrillaGralIndex {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-} */
-
-/* .GrillaHeader {
-    grid-column: 1/5;
-    grid-row: 1/2;
-}
-
-.GrillaMain {
-    grid-column: 1/5;
-    grid-row: 2/5;
-}
-
-.GrillaFooter {
-    grid-column: 1/5;
-    grid-row: 5/6;
-} */
