Creo que con este ya queda

--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -153,14 +153,36 @@ h1 {
     --bs-gutter-x: 0rem;
 }
 
-
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* MAIN CONTACTOS */
-
 
 .mapa {
     width: 100%
 }
+
+.mapaInput {
+    display: flex;
+    justify-content: space-around;
+    margin: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/* ESTILOS VIEJOS*/
+
+
 /*Estilos sobre textos */
 
 /* .tituloSecundario {
@@ -169,26 +191,6 @@ h1 {
     text-decoration: underline;
     font-size: 50px;
 } */
-
-/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
-/* MAIN SERVICIOS */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Estilos de texto de Diseño Arq y de Decoracion y estilo */
@@ -262,11 +264,7 @@ h1 {
 
 /*Estilos en Cuerpo main */
 
-/* .mapaInput {
-    display: flex;
-    justify-content: space-around;
-    margin: 2rem;
-} */
+
 
 
 /* .datosOficina {
