Arreglos segun entrega

--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -7,8 +7,8 @@
 }
 
 h1 {
-    font-size: 50px;
-    font-style: italic;
+    
+    
     color: black;
 }
 
@@ -68,6 +68,10 @@ h1 {
     color: white;
 }
 
+.hambToggler {
+    background-color: gray;
+}
+
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* ESTILOS EN EL FOOTER */
 
@@ -122,6 +126,7 @@ h1 {
     text-decoration: none;
 }
 
+
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /*MAIN SOBRE NOSOTROS */
 
@@ -137,6 +142,8 @@ h1 {
     color: black;
     text-align: center;
 }
+
+
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* MAIN PROYECTOS */
@@ -167,12 +174,24 @@ h1 {
 }
 
 
+.formContact {
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
 
 
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/* MAIN INDEX */
+
+.iconArrow {
+    background-color: black;
+    border-radius: 0.5rem;
+}
 
 
-
-
+.MarginGral {
+    margin: 3%;
+}
 
 
 
