--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -7,11 +7,19 @@
 }
 
 h1 {
-    
-    
+    font-style: italic;
+    font-size: 50px;
     color: black;
 }
 
+h2 {
+    font-style: italic;
+    font-size: 50px;
+}
+
+h3 {
+    font-size: 20px;
+}
 /* Estilos de texto para varias paginas*/
 
 .textoDescriptivo {
@@ -117,15 +125,19 @@ h1 {
 }
 
 .enlacesRedes2 {
-    margin-top: 25px;
+    margin-top: 25px;    
 }
 
 .enlacesRedes2 a {
-    font-size: 15px;
     color: white;
     text-decoration: none;
 }
 
+.enlaceRedes3 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+}
 
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /*MAIN SOBRE NOSOTROS */
