--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -20,6 +20,19 @@ h2 {
 h3 {
     font-size: 20px;
 }
+
+@media (max-width: 656px) {
+    h1 {
+        font-size: 25px;
+            }
+    h2 {
+        font-size: 25px;
+    }
+
+    }
+}
+
+
 /* Estilos de texto para varias paginas*/
 
 .textoDescriptivo {
