--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -23,11 +23,15 @@ h3 {
 
 @media (max-width: 656px) {
     h1 {
-        font-size: 30px;
+        font-size: 25px;
             }
     h2 {
-        font-size: 30px;
+        font-size: 25px;
     }
+.Conocenos {
+    font-size: 25px;
+}
+
     }
 
     @media (max-width: 656px) {
@@ -233,17 +237,11 @@ h3 {
     margin: 3%;
 }
 
-
-@media (max-width: 656px) {
-    h1 {
-        font-size: 30px;
-            }
-    h2 {
-        font-size: 30px;
-    }
-    }
-
-
+.Conocenos {
+    text-decoration: none;
+    color: black;
+   }
+    
 
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* ESTILOS VIEJOS*/
