--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -1,3 +1,215 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+h1 {
+  font-style: italic;
+  font-size: 50px;
+  color: black;
+}
+
+h2 {
+  font-style: italic;
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+@media (max-width: 656px) {
+  h1 {
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  .Conocenos {
+    font-size: 25px;
+  }
+}
+@media (max-width: 656px) {
+  .logoLicen {
+    height: 70px;
+  }
+  .logoLicen2 {
+    height: 70px;
+  }
+}
+@media (min-width: 657px) {
+  .logoLicen {
+    height: 110px;
+  }
+  .logoLicen2 {
+    height: 110px;
+  }
+}
+/* Estilos de texto para varias paginas*/
+.textoDescriptivo {
+  text-align: center;
+  padding: 2rem;
+}
+.textoDescriptivo p {
+  margin-top: 10px;
+  color: dimgray;
+  font-size: 17px;
+}
+
+.imagenes {
+  width: 100%;
+  border-radius: 30px;
+  padding: 0.5rem;
+}
+
+.row {
+  --bs-gutter-x: 0rem;
+}
+
+.container-fluid {
+  background-color: black;
+}
+
+/* .logoLicen {
+    height: 110px;
+} */
+.navbar {
+  --bs-navbar-padding-x: 0;
+  --bs-navbar-padding-y: 0;
+}
+
+.nav-menu * {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+}
+
+.nav-menu > ul > li {
+  position: relative;
+  white-space: nowrap;
+}
+
+.nav-menu a {
+  display: flex;
+  align-items: center;
+  color: white;
+  padding: 10px 18px;
+  margin-bottom: 8px;
+  font-size: 15px;
+  height: 56px;
+  width: 100%;
+}
+
+.nav-item {
+  color: white;
+}
+
+.hambToggler {
+  background-color: gray;
+}
+
+.iconArrow {
+  background-color: black;
+  border-radius: 0.5rem;
+}
+
+.MarginGral {
+  margin: 3%;
+}
+
+.Conocenos {
+  text-decoration: none;
+  color: black;
+}
+
+.cuerpoSobreNosotros {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.cuerpoSobreNosotros h1 {
+  font-style: italic;
+  color: black;
+  text-align: center;
+}
+
+.mapa {
+  width: 100%;
+}
+
+.mapaInput {
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem;
+}
+
+.formContact {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.buttonEnviar {
+  background-color: rgb(218, 218, 218);
+  border: none;
+  border-radius: 5px;
+}
+
+.estiloFooter {
+  background-color: black;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: auto;
+}
+
+/* .logoLicen2 {
+    height: 110px;
+} */
+.textoPiePaginas {
+  font-style: italic;
+  text-align: justify;
+}
+
+.textoPiePaginas p {
+  color: white;
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.infoAdicional {
+  color: white;
+  margin-top: 25px;
+}
+
+.infoAdicional li {
+  list-style: none;
+}
+
+.infoAdicional h2 {
+  font-size: 20px;
+}
+
+.enlacesRedes a {
+  font-size: 30px;
+}
+
+.enlacesRedes2 {
+  margin-top: 25px;
+}
+
+.enlacesRedes2 a {
+  color: white;
+  text-decoration: none;
+}
+
+.enlaceRedes3 {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
