--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -67,31 +67,23 @@ h3 {
   --bs-gutter-x: 0rem;
 }
 
-.container-fluid {
-  background-color: black;
-}
-
-/* .logoLicen {
-    height: 110px;
-} */
 .navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0;
 }
-
-.nav-menu * {
+.navbar .container-fluid {
+  background-color: black;
+}
+.navbar .container-fluid .hambToggler {
+  background-color: gray;
+}
+.navbar .container-fluid div .nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
   display: inline-block;
 }
-
-.nav-menu > ul > li {
-  position: relative;
-  white-space: nowrap;
-}
-
-.nav-menu a {
+.navbar .container-fluid div .nav-menu * a {
   display: flex;
   align-items: center;
   color: white;
@@ -101,15 +93,14 @@ h3 {
   height: 56px;
   width: 100%;
 }
-
-.nav-item {
+.navbar .container-fluid div .nav-menu * .nav-item {
   color: white;
+  position: relative;
+  white-space: nowrap;
 }
 
-.hambToggler {
-  background-color: gray;
-}
-
+/*------------------estilos header--------------------*/
+/*------------------estilos viejos header--------------------*/
 .iconArrow {
   background-color: black;
   border-radius: 0.5rem;
