--- a/scss/_MainSobreNosotros.scss
+++ b/scss/_MainSobreNosotros.scss
@@ -2,11 +2,16 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    h1 {
+        font-style: italic;
+        color: black;
+        text-align: center;
+    }
 }
 
-.cuerpoSobreNosotros h1 {
-    font-style: italic;
-    color: black;
-    text-align: center;
-}
-
+// .cuerpoSobreNosotros h1 {
+//     font-style: italic;
+//     color: black;
+//     text-align: center;
+// }
