--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,13 @@
 
-@import "_Generales";
-@import "_Maps";
 @import "_Variables";
+@import "_Maps";
+@import "_Mixins";
+
+@import "_Generales";
+
 @import "_Header";
 @import "_Footer";
+
 @import "_MainIndex";
 @import "_MainSobreNosotros";
 @import "_MainContactos";
