--- a/Estilos/styles.css
+++ b/Estilos/styles.css
@@ -4,23 +4,25 @@
   box-sizing: border-box;
 }
 
-h1 {
+h1, h2 {
   font-style: italic;
   font-size: 50px;
   color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 h2 {
-  font-style: italic;
-  font-size: 50px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 h3 {
   font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
 }
 
 @media (max-width: 656px) {
-  h1 {
+  h1, h2 {
     font-size: 25px;
   }
   h2 {
@@ -31,12 +33,14 @@ h3 {
   }
 }
 @media (max-width: 656px) {
-  .logoLicen, .logoLicen2 {
+  .logoLicen,
+  .logoLicen2 {
     height: 70px;
   }
 }
 @media (min-width: 657px) {
-  .logoLicen, .logoLicen2 {
+  .logoLicen,
+  .logoLicen2 {
     height: 110px;
   }
 }
@@ -87,7 +91,6 @@ h3 {
 }
 .navbar .container-fluid div .nav-menu * a {
   display: flex;
-  align-items: center;
   color: white;
   padding: 10px 18px;
   margin-bottom: 8px;
@@ -116,7 +119,6 @@ h3 {
   margin-top: 15px;
 }
 .container-fluid div .infoAdicional {
-  color: white;
   margin-top: 25px;
 }
 .container-fluid div .enlacesRedes a {
@@ -152,7 +154,8 @@ h3 {
   justify-content: space-evenly;
   align-items: center;
 }
-.cuerpoSobreNosotros h1 {
+
+h1, h2 {
   font-style: italic;
   color: black;
   text-align: center;
