--- a/scss/_Header.scss
+++ b/scss/_Header.scss
@@ -18,7 +18,7 @@
 
                 a {
                     display: flex;
-                    align-items: center;
+                    align-items: map-get($flexbox , center );
                     color: white;
                     padding: 10px 18px;
                     margin-bottom: 8px;
