--- a/scss/_MainSobreNosotros.scss
+++ b/scss/_MainSobreNosotros.scss
@@ -1,17 +1,9 @@
 .cuerpoSobreNosotros {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    @include flexbox (space-evenly,center);
+}
 
     h1 {
         font-style: italic;
         color: black;
         text-align: center;
     }
-}
-
-// .cuerpoSobreNosotros h1 {
-//     font-style: italic;
-//     color: black;
-//     text-align: center;
-// }
