--- a/scss/_Generales.scss
+++ b/scss/_Generales.scss
@@ -48,6 +48,11 @@ h3 {
     @media (min-width: 657px) {
         height: 110px;
     }
+
+    &:hover {
+        transition: 1s;
+        transform: scale(1.02, 1.02);
+    }
 }
 
 
@@ -73,12 +78,8 @@ h3 {
     }
 }
 
-
 .row {
     --bs-gutter-x: 0rem;
 }
 
 
-.logoLicen:hover {
-    transform: scale(1.5, 1.5);
-}
